# lins-living-loop

./: .gitattributes  .gitignore  CHANGELOG.md  README.en.md  README.md  SKILL.md  lll  package.json  pyproject.toml
.github/workflows/: translate-docs.yml
evals/: evals.json
references/: adapters.md  dop-lite-vs-pwf-defaults.md  hermes-permissions-config.md  lins-living-loop-renaming.md  minimal-runner.md  observability-recovery.md  output-language-and-append-only.md  product-surface-noise-and-reuse-output.md  session-lessons-2026-06-07.md  session-lessons-2026-06-08-metadata-naming.md  session-lessons-2026-06-13-mode-selection.md  session-lessons-2026-06-14-research-scope-correction.md  session-lessons-2026-06-14-validation-shape.md  session-lessons-2026-06-15-compact-layout-jsonl.md  session-lessons-2026-06-15-lll-trigger-vs-execution.md  session-lessons-2026-06-15-validation-closeout.md  session-lessons-2026-06-16-commercial-agent-ecosystem-research.md  session-lessons-2026-06-16-community-evidence-research.md  session-lessons-2026-06-16-source-research-traceability.md  session-lessons-2026-06-17-aios-kit-friend-install.md  session-lessons-2026-06-17-public-repo-local-overlay-audit.md  session-lessons-2026-06-18-aios-instance-root.md  validator-pass-patterns.md  workdir-ux-migration.md
scripts/: audit_public.py  dop.py  lll.py  translate_docs.py
src/lll_cli/: __init__.py  main.py
templates/prompts/: synthesis-worker.md  validation-worker.md  worker.md
templates/task/: handoff.md  status.json  task.md
tests/: test_cli_smoke.py
translations/en/: README.md  (+2 more)
(+20 files in other folders)
