[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lins-living-loop"
version = "0.2.0"
description = "Lin's Living Loop CLI and skill: file-backed durable AI-agent workdirs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
lll = "lll_cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
